<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circlee_ng">


    <TextView
        android:id="@+id/resetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Re_password"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/Enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_reset_and_your_new_password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#504949"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/resetPass"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/enterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:autofillHints="username"
        android:ems="13"
        android:hint="@string/Enter_cod"
        android:inputType="number"
        android:paddingBottom="30dp"
        android:textColorHint="#504949"
        android:textSize="24sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enter" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingBottom="30dp"
        android:textColorHint="#504949"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/enterCode"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/retypePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/retype_new_password"
        android:inputType="textPassword"
        android:paddingBottom="30dp"
        android:textColorHint="#504949"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPass"
        tools:ignore="VisualLintTextFieldSize"/>

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000"
        android:text="@string/reset_passwd"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePass" />

    <Button
        android:id="@+id/GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/remember_password_now_ngo_back"
        android:textColor="#504949"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
