<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circle_ng"
    tools:context=".CreateAccountActivity2">
    <TextView
        android:id="@+id/createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_naccount"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="90dp"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/Enteremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:autofillHints="username"
        android:ems="13"
        android:hint="Enter Email ID"
        android:inputType="text"
        android:paddingBottom="50dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

    <EditText
        android:id="@+id/createusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/create_username"
        android:inputType="text"
        android:paddingBottom="50dp"
        android:textColor="@color/material_dynamic_neutral40"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/Enteremail"
        tools:layout_editor_absoluteX="30dp"

    <EditText
        android:id="@+id/createpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:paddingBottom="50dp"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createusername" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="50dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createpassword" />


</androidx.constraintlayout.widget.ConstraintLayout>